dc/s2n-quic-dc/src/snapshots/stream__writer__tests__client_second_write_blocks_until_max_data.snap
---
source: dc/s2n-quic-dc/src/testing.rs
expression: logs
---
0 [main] TRACE c#credit.acquire.fast_path=1
0 [main] TRACE c#credit.acquire.bytes=5
0 [main] DEBUG event=on_init_sent prev=Init next=InitSent location=dc/s2n-quic-dc/src/stream/writer.rs
0 [main] DEBUG Sent QueueInit with early data binding_id=1 bytes_read=5 is_fin=false
0 [main] DEBUG poll_remote_budget received messages binding_id=1 status=InitSent msg_count=1
0 [main] DEBUG event=on_confirmed prev=InitSent next=Open location=dc/s2n-quic-dc/src/stream/writer.rs
0 [main] DEBUG Flow established binding_id=1
0 [main] TRACE c#credit.acquire.fast_path=1
0 [main] TRACE c#credit.acquire.bytes=1
0 [main] DEBUG event=on_send_fin prev=Open next=FinSent location=dc/s2n-quic-dc/src/stream/writer.rs
0 [main] DEBUG Writer dropping binding_id=1 status=FinSent next_offset=6 remote_max_data=4096
0 [main] DEBUG event=on_shutdown prev=FinSent next=Shutdown location=dc/s2n-quic-dc/src/stream/writer.rs
